--- a/src/App.css
+++ b/src/App.css
@@ -2,202 +2,293 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
 
 html {
-    scroll-behavior:smooth;
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: 'Montserrat', 'BioRhyme', calibri;
+  margin: 0;
+  padding: 0;
+  background-color: rgba(244, 253, 255, 0.949);
+}
+
+* {
+  box-sizing: border-box; /* Changed to border-box for better sizing */
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+input {
+  outline: none;
+  border: none;
+}
+
+.logo {
+  font-family: 'BioRhyme';
+  color: black;
+  font-size: large;
+}
+
+.logo:hover {
+  transform: scale(1.3);
+  box-shadow: 0 0 25px greenyellow;
+}
+
+.main {
+  width: 100%;
+  height: 768px;
+  position: relative;
+  background: no-repeat;
+}
+
+.main .img {
+  height: 700px;
+  margin-left: 900px;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between; /* Adjusted for better spacing */
+  align-items: center;
+  box-shadow: 5px 10px 30px rgb(43, 42, 42);
+  position: fixed;
+  left: 0;
+  top: 0; 
+  width: 100%;
+  z-index: 1;
+  background-color: rgb(209, 246, 242);
+}
+
+nav ul {
+  display: flex;
+}
+
+nav ul li a {
+  font-family: calibri;
+  height: 40px;
+  line-height: 43px;
+  margin: 3px;
+  padding: 0px 22px;
+  display: flex;
+  font-size: 1rem;
+  text-transform: uppercase;
+  font-weight: 500;
+  color: black;
+  letter-spacing: 1px;
+  border-radius: 2px;
+  transition: 0.4s ease-in-out;
+}
+
+.Hey {
+  font-family: calibri;
+  color: black;
+  font-weight: 500;
+  font-size: 2rem;
+  border-bottom: 2px solid black;
+}
+
+nav ul li a:hover {
+  background-color: rgb(151, 135, 11);
+  color: white;
+  box-shadow: 5px 10px 30px rgb(121, 232, 24);
+  border-bottom: 4px solid rgb(139, 4, 198);
+}
+
+.menu-btn {
+  display: none; /* Hide checkbox by default */
+}
+
+.menu-icon {
+  display: none; /* Hide hamburger icon by default */
+  cursor: pointer;
+}
+
+.nav-icon {
+  background-color: black;
+  display: block;
+  height: 3px;
+  width: 25px;
+  position: relative;
+}
+
+.nav-icon::before,
+.nav-icon::after {
+  content: '';
+  background-color: black;
+  height: 3px;
+  width: 25px;
+  position: absolute;
+  transition: all 0.3s ease;
+}
+
+.nav-icon::before {
+  top: -8px; /* Positioning for the top line */
+}
+
+.nav-icon::after {
+  bottom: -8px; /* Positioning for the bottom line */
+}
+
+.menu-btn:checked ~ .menu {
+  display: flex;
+  flex-direction: column; /* Stack items vertically */
+  position: absolute;
+  top: 60px; /* Position below the navbar */
+  left: 0;
+  right: 0;
+  background-color: rgb(209, 246, 242);
+  padding: 1rem;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.menu-btn:checked ~ .menu-icon .nav-icon {
+  background-color: transparent; /* Hide the middle line */
+}
+
+.menu-btn:checked ~ .menu-icon .nav-icon::before {
+  transform: rotate(45deg);
+  top: 0;
+}
+
+.menu-btn:checked ~ .menu-icon .nav-icon::after {
+  transform: rotate(-45deg);
+  bottom: 0;
+}
+
+.menu li {
+  margin: 1rem 0; /* Space between items */
+}
+
+@media (max-width: 768px) {
+  .menu {
+      display: none; /* Hide menu items by default on small screens */
+      width: 100%; /* Full width for the menu */
   }
-  
-body{
-    font-family: 'Montserrat','BioRhyme',calibri;
-    margin: 0;
-    padding: 0;
-  	background-color: rgba(244, 253, 255, 0.949);
 
+  .menu-icon {
+      display: block; /* Show hamburger icon on small screens */
+  }
 
-
-
+  nav ul {
+      display: none; /* Hide the default menu */
+  }
 }
 
-*{
-    box-sizing: none;
-}
-ul{
-    list-style: none;
-}
-a{
-    text-decoration: none;
-}
-input{
-    outline: none;
-    border: none;
-}
-.logo{
-    font-family: 'BioRhyme';
-    color: black;
-    font-size: large;
-
-}
-.logo:hover{
-    transform: scale(1.3);
-    box-shadow: 0 0 25px greenyellow;
-}
-.main{
-    width: 100%;
-    height: 768px;
-    position: relative;
-    background: no-repeat;
-    }
-.main .img{
-    height: 700px;
-     margin-left: 900px;
-   }
-nav{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    box-shadow: 5px 10px 30px rgb(43, 42, 42);
-    position: fixed;
-    left: 0;
-    top: 0; 
-    width: 100%;
-    z-index: 1;
-    background-color: rgb(209, 246, 242);
-
-}
-nav ul{
-    display: flex;
-}
-nav ul li a{
-    font-family: calibri;
-    height: 40px;
-    line-height: 43px;
-    margin: 3px;
-    padding: 0px 22px;
-    display: flex;
-    font-size: 1rem;
-    text-transform: uppercase;
-    font-weight: 500;
-    color: black;
-    letter-spacing: 1px;
-    border-radius: 2px;
-    transition: 0.4s ease-in-out;
-}
-.Hey{
-    font-family: calibri;
-    color: black;
-    font-weight: 500;
-    font-size: 2rem;
-    border-bottom: 2px solid black;
+.name {
+  font-family: 'Montserrat';
+  width: 600px;
+  position: absolute;
+  left: 16%;
+  top: 50%;
+  transform: translate(-20%, -50%);
 }
 
-nav ul li a:hover{
-    background-color: rgb(151, 135, 11);
-    color: white;
-    box-shadow: 5px 10px 30px rgb(121, 232, 24);
-    border-bottom: 4px solid rgb(139, 4, 198);
+.name span {
+  color: rgb(136, 136, 19);
+  border-bottom: 2px solid rgb(0, 0, 0);
 }
 
-nav .menu-btn,.menu-icon{
-    display: none;
+.name .details {
+  color: rgb(17, 17, 17);
+  font-weight: 600;
 }
 
-.name{
-    font-family: 'Montserrat';
-    width: 600px;
-    position: absolute;
-    left: 16%;
-    top: 50%;
-    transform: translate(-20%,-50%);
-}
-.name span{
-    color: rgb(136, 136, 19);
-    border-bottom: 2px solid rgb(0, 0, 0);
-}
-.name .details{
-    color:rgb(17, 17, 17);
-    font-weight: 600;
-}
-.name .heading{
-    color:rgb(0, 0, 0);
-    font-weight: 800;
-}
-.name h1{
-    font-family: 'Montserrat';
-    font-size: 46px;
-    margin: 0px;
-    letter-spacing: 3px;
-    color: rgb(106, 71, 25);
-}
-.btn-1{
-    width: 110px;
-    height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: rgb(97, 65, 24);
-     box-shadow: 5px 10px 30px black;
-     border-radius: 10px;
-     color: black;
-     border: #000000;
-}
-.btn-2{
-    margin-top: 3px;
-    font-size: 14px;
-    width: 110px;
-    height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-     background:transparent;
-     background-color: rgb(106, 71, 25);
-     border: 2px solid #fff;
-     margin-left: 20xpx;
-     border-radius: 10px;
-     color: #ffffff;
-    
-}
-.btn-1:hover{
-    background-color: rgb(221, 221, 152);
-    transition: all ease 0.4s;
-    color: black;
-}
-.btn-2:hover{
-    background-color: rgb(222, 222, 131);
-    transition: all ease 0.4s;
-    color: black;
+.name .heading {
+  color: rgb(0, 0, 0);
+  font-weight: 800;
 }
 
-.arrow{
-    align-self: end;
-    width: 50%;
-    height: 20%;
-    margin-bottom: 8em;
-    position: absolute;
-      bottom:0px;
-      left: -3%;
-      border-right: 2px solid  #0b0b0b;
-    animation: arrow-animation ease 1.5s;
+.name h1 {
+  font-family: 'Montserrat';
+  font-size: 46px;
+  margin: 0px;
+  letter-spacing: 3px;
+  color: rgb(106, 71, 25);
+}
 
+.btn-1 {
+  width: 110px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: rgb(97, 65, 24);
+  box-shadow: 5px 10px 30px black;
+  border-radius: 10px;
+  color: black;
+  border: #000000;
 }
-.arrow::after{
-    content: '';
-    position: absolute;
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 11px 11px 0px 11px;
-    border-color: #6707b6 transparent transparent transparent;
-    right: -0.7em;
-    bottom: -2px;
+
+.btn-2 {
+  margin-top: 3px;
+  font-size: 14px;
+  width: 110px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: transparent;
+  background-color: rgb(106, 71, 25);
+  border: 2px solid #fff;
+  margin-left: 20px; /* Fixed typo from 'x' to 'px' */
+  border-radius: 10px;
+  color: #ffffff;
 }
-@keyframes arrow-animation{
-    0%{
-        bottom: 70px;
-        opacity: 0.2;
-    }
-    100%{
-        bottom: 5px;
-        opacity: 1;
-    }
+
+.btn-1:hover {
+  background-color: rgb(221, 221, 152);
+  transition: all ease 0.4s;
+  color: black;
 }
+
+.btn-2:hover {
+  background-color: rgb(222, 222, 131);
+  transition: all ease 0.4s;
+  color: black;
+}
+
+.arrow {
+  align-self: end;
+  width: 50%;
+  height: 20%;
+  margin-bottom: 8em;
+  position: absolute;
+  bottom: 0px;
+  left: -3%;
+  border-right: 2px solid #0b0b0b;
+  animation: arrow-animation ease 1.5s;
+}
+
+.arrow::after {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 11px 11px 0px 11px;
+  border-color: #6707b6 transparent transparent transparent;
+  right: -0.7em;
+  bottom: -2px;
+}
+
+@keyframes arrow-animation {
+  0% {
+      bottom: 70px;
+      opacity: 0.2;
+  }
+  100% {
+      bottom: 5px;
+      opacity: 1;
+  }
+}
+
+/*About Section*/
 .about{
 	width:100%;
 	height: 100vh;
