--- a/src/App.css
+++ b/src/App.css
@@ -214,7 +214,7 @@ nav ul li a:hover {
   color: rgb(106, 71, 25);
 }
 
-.btn-1 {
+.btn-1{
   width: 110px;
   height: 40px;
   display: flex;
@@ -227,21 +227,6 @@ nav ul li a:hover {
   border: #000000;
 }
 
-.btn-2 {
-  margin-top: 3px;
-  font-size: 14px;
-  width: 110px;
-  height: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: transparent;
-  background-color: rgb(106, 71, 25);
-  border: 2px solid #fff;
-  margin-left: 20px; 
-  border-radius: 10px;
-  color: #ffffff;
-}
 
 .btn-1:hover {
   background-color: rgb(221, 221, 152);
@@ -249,11 +234,6 @@ nav ul li a:hover {
   color: black;
 }
 
-.btn-2:hover {
-  background-color: rgb(222, 222, 131);
-  transition: all ease 0.4s;
-  color: black;
-}
 
 .arrow {
   align-self: end;
@@ -293,57 +273,81 @@ nav ul li a:hover {
 
 
 /*About Section*/
-.about{
-	width:100%;
-	height: 100vh;
-	background-color: rgba(244, 253, 255, 0.949);
-	box-sizing: border-box;
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	padding: 50px 5% 0px 5%;
-	position: relative;
- 
+
+
+.about {
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(244, 253, 255, 0.949);
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 50px 5% 0px 5%;
+  position: relative;
 }
-.about-text{
-	width: 50%;
+
+.about-text {
+  width: 50%;
 }
-.about-text h2{
-	font-size: 2rem;
-	color:#03630b;
-	font-weight: 400;
+
+.about-text h2 {
+  font-size: 2rem;
+  color: #03630b;
+  font-weight: 400;
+  margin: 0;
+  padding: 0;
 }
-.about-text h2{
-	margin: 0px;
-	padding: 0px;
+
+.about-text p {
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 1.2rem;
+  color: #030303;
 }
-.about-text p{
-    font-family:'Times New Roman', Times, serif;
-	font-size: 1.2rem;
-	color:#030303;
-	
+
+.about-text button {
+  width: 140px;
+  height: 40px;
+  border-radius: 10px;
+  border: none;
+  outline: none;
+  color: #ffffff;
+  background-color: #8f7d0d;
+  margin-right: 10px; /* Space between buttons */
 }
-.about-text button{
-	width: 140px;
-	height: 40px;
-	border-radius: 10px;
-	border: none;
-    outline: none;
-    color: #ffffff;
-	background-color:#8f7d0d;
+
+.about-text button:hover {
+  background-color: #d0ff00;
+  transition: all ease 0.3s;
+  color: #000266;
 }
-.about-text button:hover{
-	background-color: #d0ff00;
-    transition: all ease 0.3s;
-    color: #000266;
+.about-text .open-cv-btn{
+  width: 140px;
+  height: 40px;
+  border-radius: 10px;
+  border: none;
+  outline: none;
+  color: #ffffff;
+  background-color: #bca402;
+  padding: 10px;
+  text-align: center;
 }
-.about-model img{
-    height: 500px;
-    margin-bottom: 90px;
+.about-text .open-cv-btn:hover {
+  background-color: #d0ff00;
+  transition: all ease 0.3s;
+  color: #000266;
 }
-.about-text span{
-    color: aqua;
+
+.about-model img {
+  height: 400px;
+  margin-bottom: 90px;
 }
+
+.about-text span {
+  color: aqua;
+}
+
+
 
 /* Experience Section */
 .experience {
@@ -351,6 +355,7 @@ nav ul li a:hover {
   text-align: center;
   padding: 40px 20px;
   margin-bottom: 70px;
+
 }
 
 .title {
@@ -421,7 +426,7 @@ nav ul li a:hover {
 /* Responsive Design */
 @media (max-width: 768px) {
   .experience{
-    margin-top: 100px;
+    margin-top: 200px;
   }
   .details-container {
     width: 100%;
@@ -792,6 +797,7 @@ nav ul li a:hover {
   margin-top: 20px;
 }
 
+
 /*Meadia Queries for All Component*/
 
 /*Header media queries*/
@@ -823,7 +829,7 @@ nav ul li a:hover {
     padding-left: 200px;
   }
 
-  .btn-1, .btn-2 {
+  .btn-1{
     width: 30%;
     
   }
@@ -835,7 +841,7 @@ nav ul li a:hover {
     justify-content: center;
   }
 
-  .btn-1, .btn-2 {
+  .btn-1{
     margin: 0 2px; }
 
   .name h1 {
@@ -847,53 +853,17 @@ nav ul li a:hover {
   }
 }
 
-/*About media queries*/
-.about {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px;
-}
 
-.about-model img {
-  width:100%;
- height:100%;
- max-width: 400px;
-}
-
-.about-text {
-  text-align: center;
-}
-
-.about-text h2 {
-  font-size: 2em;
-}
-
-.about-text h3 {
-  font-size: 1.5em;
-}
-
-.about-text p {
-  font-size: 1em;
-  margin: 10px 0;
-}
-
-button {
-  padding: 10px 20px;
-  margin-top: 10px;
-  cursor: pointer;
-}
-
+/* Media Queries */
 @media (min-width: 768px) {
   .about {
     flex-direction: row;
     justify-content: space-around;
-   
   }
 
   .about-model img {
-    width:100%;
-    height:100%;
+    width: 90%;
+    height: 90%;
   }
 
   .about-text {
@@ -916,6 +886,8 @@ button {
 @media (max-width: 767px) {
   .about {
     padding: 10px;
+    flex-direction: column; /* Stack elements on smaller screens */
+    align-items: center;
   }
 
   .about-text h2 {
@@ -930,10 +902,19 @@ button {
     font-size: 0.9em;
   }
 
-  button {
-    width: 100%;
+  .about-text button {
+    width: 100%; /* Full width on smaller screens */
+    margin: 5px 0; /* Margin between buttons */
+    margin-bottom: 20px;
+
+  }
+  .about-text .open-cv-btn{
+    width: 100%; 
+  
   }
 }
+
+
 
 /*Media Queries for Contact Section*/
 .contacts {
